.vendor/dislin/examples/ch/dislin.h

void  shdeur (const int *inray, const long *ipray, const int *icray, int n);
void  shdfac (double xfac);
void  shdmap (const char *cmap);
void  shdmod (const char *copt, const char *ctyp);
void  shdnor (const int *inray, const long *ipray, const int *icray, int n);
void  shdpat (long ipat);
void  shdsou (const int *inray, const long *ipray, const int *icray, int n);
void  shdusa (const int *inray, const long *ipray, const int *icray, int n);
void  shield (const char *carea, const char *cmode);
void  shlcir (int nx, int ny, int nr);
void  shldel (int id);
void  shlell (int nx, int ny, int na, int nb, double t);
int   shlind (void);
void  shlpie (int nx, int ny, int nr, double a, double b);
void  shlpol (const int *nxray, const int *nyray, int n);
void  shlrct (int nx, int ny, int nw, int nh, double t);
void  shlrec (int nx, int ny, int nw, int nh);
void  shlres (int n);
void  shlsur (void);
void  shlvis (int id, const char *cmode);
void  simplx (void);
int   skipfl (int nu, int nbyte);
 
void  smxalf (const char *calph, const char *c1, const char *c2, int n);
void  solid  (void);
void  sortr1 (double *xray, int n, const char *copt);
void  sortr2 (double *xray, double *yray, int n, const char *copt);
void  spcbar (int n);
void  sphe3d (double xm, double ym, double zm, double r, int n, int m);
void  spline (const double *xray, const double *yray,  int n,
              double *xsray, double *ysray, int *nspl);
void  splmod (int ngrad, int npts);
void  stmmod (const char *cmod, const char *ckey);
void  stmopt (int n, const char *copt);
void  stmpts (const double *xmat, const double *ymat, int nx, int ny, 
              const double *xp, const double *yp, double x0, double y0, 
              double *xray, double *yray, int nmax, int *nray);
void  stmpts3d (const double *xv, const double *yv, const double *zv,
	      int nx, int ny, int nz, const double *xp, const double *yp, 
	      const double *zp, double x0, double y0, double z0, 
              double *xray, double *yray, double *zray, int nmax, int *nray);
void  stmtri (const double *xv, const double *yv, const double *xp, 
              const double *yp, int n, const int *i1ray, const int *i2ray, 
              const int *i3ray, int ntri, const double *xs, 
              const double *ys, int nray);
void  stmval (double x, const char *copt);
void  stream (const double *xmat, const double *ymat, int nx, int ny, 
              const double *xp, const double *yp, 
              const double *xs, const double *ys, int n);
void  stream3d (const double *xv, const double *yv, const double *zv,
	      int nx, int ny, int nz, const double *xp, const double *yp, 
              const double *zp, const double *xs, const double *ys, 
              const double *zs, int n);
void  strt3d (double x, double y, double z);
void  strtpt (double x, double y);
void  surclr (int ictop, int icbot);
void  surfce (const double *xray, int n, const double *yray, int m, 
              const double *zmat);
void  surfcp (double (*zfun)(double x, double y, int i), 
                         double a1, double a2, double astp,
                         double b1, double b2, double bstp);
void  surfun (double (*zfun)(double x, double y), int ixpts, double xdel, 
                     int iypts, double ydel);
void  suriso (const double *xray, int nx, const double *yray, int ny, 
              const double *zray, int nz, const double *wmat, double wlev);
void  surmat (const double *zmat, int nx, int ny, int ixpts, int iypts);
void  surmsh (const char *copt);
void  suropt (const char *copt);
void  surshc (const double *xray, int n, const double *yray, int m, 
              const double *zmat, const double *wmat);
void  surshd (const double *xray, int n, const double *yray, int m, 
              const double *zmat);
void  sursze (double xmin, double xmax, double ymin, double ymax);
void  surtri (const double *xray, const double *yray, const double *zray, 
              int n, const int *i1ray, const int *i2ray, const int *i3ray,
              int ntri);
void  survis (const char *cvis);