.vendor/dislin/julia/Dislin.jl


function shdeur(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdeur, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdfac(x::Float64)
  ccall((:shdfac, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function shdmap(s::String)
  ccall((:shdmap, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function shdmod(s1::String, s2::String)
  ccall((:shdmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function shdnor(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdnor, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdpat(i::Int64)
  ccall((:shdpat, "libdislin_d.so"), Cvoid, (Clong,), i)
end

function shdsou(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdsou, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdusa(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdusa, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shield(s1::String, s2::String)
  ccall((:shield, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function shlcir(i1::Int64, i2::Int64, i3::Int64)
  ccall((:shlcir, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function shldel(i::Int64)
  ccall((:shldel, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function shlell(i1::Int64, i2::Int64, i3::Int64, i4::Int64, x::Float64)
  ccall((:shlell, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, 
          Float64), i1, i2, i3, i4, x)
end

function shlind()
  n = ccall((:shlind, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function shlpie(i1::Int64, i2::Int64, i3::Int64, x1::Float64, x2::Float64)
  ccall((:shlpie, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Float64, 
          Float64), i1, i2, i3, x1, x2)
end

function shlpol(ixray::Vector{Int32}, iyray::Vector{Int32}, n::Int64)
  ccall((:shlpol, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Int32), ixray, iyray, n)
end

function shlrct(i1::Int64, i2::Int64, i3::Int64, i4::Int64, x::Float64)
  ccall((:shlrct, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, 
          Float64), i1, i2, i3, i4, x)
end

function shlrec(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:shlrec, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function shlres(i::Int64)
  ccall((:shlres, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function shlsur()
  ccall((:shlsur, "libdislin_d.so"), Cvoid, ())
end

function shlvis(i::Int64, s::String)
  ccall((:shlvis, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function simplx()
  ccall((:simplx, "libdislin_d.so"), Cvoid, ())
end

function skipfl(i1::Int64, i2::Int64)
  n = ccall((:skipfl, "libdislin_d.so"), Int32, (Int32, Int32), i1, i2)
  return convert(Int64, n)
end

function smxalf(s1::String, s2::String, s3::String, i::Int64) 
  ccall((:smxalf, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Ptr{UInt8},
          Int32), s1, s2, s3, i)
end

function solid()
  ccall((:solid, "libdislin_d.so"), Cvoid, ())
end

function sortr1(xray::Vector{Float64}, n::Int64, s::String)
  ccall((:sortr1, "libdislin_d.so"), Cvoid, (Ptr{Float64},  
          Int32, Ptr{UInt8}), xray, n, s)
end

function sortr2(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
                s::String)
  ccall((:sortr2, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Int32, Ptr{UInt8}), xray, yray, n, s)
end

function spcbar(i::Int64)
  ccall((:spcbar, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function sphe3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
                i1::Int64, i2::Int64)
  ccall((:sphe3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Int32, Int32), x1, x2, x3, x4, i1, i2)
end

function spline(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
                xsray::Vector{Float64}, ysray::Vector{Float64})
  nspl = Cint[0]
  ccall((:spline, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Float64}, Int32, Ptr{Float64}, Ptr{Float64},
           Ptr{Cint}), xray, yray, n, xsray, ysray, nspl)
  return convert(Int64, nspl[1])
end

function splmod(i1::Int64, i2::Int64)
  ccall((:splmod, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function stmmod(s1::String, s2::String)
  ccall((:stmmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function stmopt(i::Int64, s::String)
  ccall((:stmopt, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function stmpts(xmat::Array{Float64, 2}, ymat::Array{Float64, 2},
                nx::Int64, ny::Int64, xp::Vector{Float64}, yp::Vector{Float64},
                x0::Float64, y0::Float64, xray::Vector{Float64}, 
                yray::Vector{Float64}, nmax::Int64)
  x = transpose(xmat)
  y = transpose(ymat)
  n = Cint[0]
  ccall((:stmpts, "libdislin_d.so"), Int32, (Ptr{Float64}, Ptr{Float64}, 
          Int32, Int32, Ptr{Float64}, Ptr{Float64}, Float64, Float64,
          Ptr{Float64}, Ptr{Float64}, Int32, Ptr{Cint}), 
          x, y, nx, ny, xp, yp, x0, y0, xray, yray, nmax, n)
  x = 0
  y = 0 
  return convert(Int64, n[1])
end

function stmpts3d(xv::Array{Float64, 3}, yv::Array{Float64, 3},
                zv::Array{Float64, 3}, nx::Int64, ny::Int64, nz::Int64,
                xp::Vector{Float64}, yp::Vector{Float64}, zp::Vector{Float64},
                x0::Float64, y0::Float64, z0::Float64, xray::Vector{Float64}, 
                yray::Vector{Float64}, zray::Vector{Float64}, nmax::Int64)
  x = transpose(xmat)
  y = transpose(ymat)
  z = transpose(ymat)
  n = Cint[0]
  ccall((:stmpts3d, "libdislin_d.so"), Int32, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Int32, Int32, Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Float64, Float64, Float64, Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Cint}), 
          x, y, z, nx, ny, nz, xp, yp, zp, x0, y0, z0, xray, yray, zray, nmax,
          n)
  x = 0
  y = 0 
  z = 0
  return convert(Int64, n[1])
end

function stmtri(xv::Vector{Float64}, yv::Vector{Float64},
                xp::Vector{Float64}, yp::Vector{Float64}, n::Int64,
                i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, ntri::Int64, 
                xs::Vector{Float64}, ys::Vector{Float64}, nray::Int64)
  ccall((:stmtri, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Int32, 
          Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32, Ptr{Float64},
          Ptr{Float64}, Int32), xv, yv, xp, yp, n, i1ray, i2ray, i3ray,
          ntri, xs, ys, nray)
end

function stmval(x::Float64, s::String)
  ccall((:stmval, "libdislin_d.so"), Cvoid, (Float64, Ptr{UInt8}), x, s)
end

function stream(xmat::Array{Float64, 2}, ymat::Array{Float64, 2},
                nx::Int64, ny::Int64, xp::Vector{Float64}, yp::Vector{Float64},
                xsray::Vector{Float64}, ysray::Vector{Float64}, n::Int64)
  x = transpose(xmat)
  y = transpose(ymat)
  ccall((:stream, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Int32, Int32, Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Int32), 
          x, y, nx, ny, xp, yp, xsray, ysray, n)
  x = 0
  y = 0 
end

function stream3d(xv::Array{Float64, 3}, yv::Array{Float64, 3},
                zv::Array{Float64, 3}, nx::Int64, ny::Int64, nz::Int64,
                xp::Vector{Float64}, yp::Vector{Float64}, zp::Vector{Float64},
                xsray::Vector{Float64}, ysray::Vector{Float64}, 
                zsray::Vector{Float64}, n::Int64)
  x = transpose(xmat)
  y = transpose(ymat)
  z = transpose(ymat)
  ccall((:stream3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Int32, Int32, Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Int32), 
          x, y, z, nx, ny, nz, xp, yp, zp, xsray, ysray, zsray, n)
  x = 0
  y = 0 
  z = 0
end

function strt3d(x1::Float64, x2::Float64, x3::Float64)
  ccall((:strt3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function strtpt(x1::Float64, x2::Float64)
  ccall((:strtpt, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function surclr(i1::Int64, i2::Int64)
  ccall((:surclr, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function surfce(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2})
  z = transpose(zmat)
  ccall((:surfce, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}), xray, n, yray, m, z)
  z = 0  # free z
end

function surfcp(zfun::Function, x1::Float64, x2::Float64, x3::Float64,
                x4::Float64, x5::Float64, x6::Float64)
  zfun_c = @cfunction $zfun Cdouble (Cdouble, Cdouble, Cint) 
  ccall((:surfcp, "libdislin_d.so"), Cvoid, 
          (Ptr{Cvoid}, Float64, Float64, Float64, Float64, Float64, Float64), 
          zfun_c, x1, x2, x3, x4, x5, x6)
end

function surfun(zfun::Function, i1::Int64, x1::Float64, i2::Int64, 
                x2::Float64)
  zfun_c = @cfunction $zfun Cdouble (Cdouble, Cdouble) 
  ccall((:surfun, "libdislin_d.so"), Cvoid, 
          (Ptr{Cvoid}, Int32, Float64, Int32, Float64), 
          zfun_c, i1, x1, i2, x2)
end

function suriso(xray::Vector{Float64}, nx::Int64, yray::Vector{Float64},
                ny::Int64, zray::Vector{Float64}, nz::Int64, 
                wmat::Array{Float64, 3}, wlev::Float64)
  w = transpose(wmat)
  ccall((:suriso, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}, Int32, Ptr{Float64}, Float64), xray, nx, yray, 
          ny, zray, nz, w, wlev)
  w = 0
end

function surmat(zmat::Array{Float64, 2}, n::Int64, m::Int64, ixpts::Int64, 
                iypts::Int64)
  z = transpose(zmat)
  ccall((:surmat, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32, Int32, 
           Int32), z, n, m, ixpts, iypts)
  z = 0  # free z
end

function surmsh(s::String)
  ccall((:surmsh, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function suropt(s::String)
  ccall((:suropt, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function surshc(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2}, wmat::Array{Float64, 2})
  z = transpose(zmat)
  w = transpose(wmat)
  ccall((:surshc, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}, Ptr{Float64}), xray, n, yray, m, z, w)
  z = 0 
  w = 0
end

function surshd(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2})
  z = transpose(zmat)
  ccall((:surshd, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}), xray, n, yray, m, z)
  z = 0  # free z
end

function sursze(x1::Float64, x2::Float64, x3::Float64, x4::Float64)
  ccall((:sursze, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, Float64),
          x1, x2, x3, x4)
end

function surtri(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64, i1ray::Vector{Int32},
                i2ray::Vector{Int32}, i3ray::Vector{Int32}, ntri::Int64)
  ccall((:surtri, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), 
          xray, yray, zray, n, i1ray, i2ray, i3ray, ntri)
end

function survis(s::String)
  ccall((:survis, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end
